--- a/templates/ticket_list.html
+++ b/templates/ticket_list.html
@@ -56,9 +56,6 @@
                                             </td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
                                                 {{ ticket.updated_at }}
-                                                {% else %}
-                                                    -
-                                                {% endif %}
                                             </td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
                                                 {% if ticket.subject is not None %}
@@ -68,16 +65,13 @@
                                                 {% endif %}
                                             </td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                                                {% if ticket.priority is not None %}
-                                                {% if ticket.priorit%}
+                                                {% if ticket.priority %}
                                                     {{ ticket.priority }}
                                                 {% else %}
                                                     -
                                                 {% endif %}
                                             </td>
                                         </tr>
-                                    {% empty %}
-                                    <p>There are currently no tickets! Great job! Take a breather, stretch, and maybe call a loved one 😄</p>
                                     {% endfor %}
                                 {% endif %}
                             </tbody>
