--- a/templates/ticket_list.html
+++ b/templates/ticket_list.html
@@ -8,26 +8,28 @@
 		<title>Zendesk Ticket Viewer</title>
 	</head>
 	<body>
-        <header class="text-gray-400 bg-gray-900 body-font">
-            <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-              <a href="/" class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
-                <svg xmlns="https://upload.wikimedia.org/wikipedia/commons/c/c8/Zendesk_logo.svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
-                  <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-                </svg>
-                <span class="ml-3 text-xl">Zendesk Coding Challenge</span>
-              </a>
-              <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-              </nav>
-              {% if has_more %}
-                <button onclick="location.href='/?page={{links_next}}'" class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Next Page
-                    <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-                    <path d="M5 12h14M12 5l7 7-7 7"></path>
-                    </svg>
-                </button>
-              {% else %}
-              {% endif %}
-            </div>
-          </header>
+		<header class="text-gray-400 bg-gray-900 body-font">
+			<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+				<a href="/?page=1" class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
+					<svg xmlns="https://upload.wikimedia.org/wikipedia/commons/c/c8/Zendesk_logo.svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
+						<path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+					</svg>
+					<span class="ml-3 text-xl">Zendesk Coding Challenge</span>
+				</a>
+				<nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
+				</nav>
+				{% if has_less %}
+				<button onclick="location.href='/?page={{prev_page}}'" class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Prev Page
+				</button>
+				{% else %}
+				{% endif %}
+				{% if has_more %}
+				<button onclick="location.href='/?page={{next_page}}'" class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Next Page
+				</button>
+				{% else %}
+				{% endif %}
+			</div>
+		</header>
 		<div class="max-w-7xl mx-auto">
 			<section class="text-gray-700 body-font">
 				<div class="container px-5 py-24 mx-auto flex flex-wrap">
