--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -1,3 +1,4 @@
+{% load humanize %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -55,7 +56,7 @@
 								<path d="M22 11.08V12a10 10 0 11-5.93-9.14"></path>
 								<path d="M22 4L12 14.01l-3-3"></path>
 							</svg>
-							<span class="title-font font-medium">Created At -> <b>{{ ticket.created_at }}</b></span>
+							<span class="title-font font-medium">Created At -> <b>{{ ticket.created_at|naturaltime}}</b></span>
 						</div>
 					</div>
 					<div class="p-2 sm:w-1/2 w-full">
@@ -64,7 +65,7 @@
 								<path d="M22 11.08V12a10 10 0 11-5.93-9.14"></path>
 								<path d="M22 4L12 14.01l-3-3"></path>
 							</svg>
-							<span class="title-font font-medium">Updated At -> <b>{{ ticket.created_at }}</b></span>
+							<span class="title-font font-medium">Updated At -><b>{{ ticket.updated_at|naturaltime}}</b></span>
 						</div>
 					</div>
 					<div class="p-2 sm:w-1/2 w-full">
