added page logic to html and updated docker containers

--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -21,6 +21,8 @@
 				<nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
 				</nav>
 			</div>
+            <button onclick="location.href='/?page={{back_value}}'" class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Return to page: {{back_value}}
+            </button>
 		</header>
 		<section class="text-gray-600 body-font">
 			{% if error %}
