--- a/templates/ticket_list.html
+++ b/templates/ticket_list.html
@@ -16,6 +16,9 @@
 						<path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
 					</svg>
 					<span class="ml-3 text-xl">Zendesk Coding Challenge</span>
+					<span class="ml-3 text-xl"> [total tickets: {{count_all}}]</span>
+					<span class="ml-3 text-xl"> [tickets on page: {{count_in_page}}]</span>
+					<span class="ml-3 text-xl"> [page {{current_page}} of {{max}}]</span>
 				</a>
 				<nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
 				</nav>
